<?xml version="1.0"?>
<package format="2">
  <name>yaicit</name>
  <version>0.0.0</version>
  <description>yaicit package for testing</description>

  <maintainer email="franco.fusco@ls2n.fr">Franco FUSCO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bar</depend>
  <depend>sequences</depend>

</package>
